# pomodoro

./: .dev.env  .gitignore  .local.env  .prod.env  Makefile  README.md  alembic.ini  depends.py  docker-compose.yaml  main.py  pyproject.toml  settings.py
alembic/versions/: d8cf00194213_sadfasfa.py
cashe/: __init__.py  accessor.py
database/: __init__.py  database.py  models.py
fastapi_app/: Dockerfile
fastapi_app/app/: main.py
handlers/: __init__.py  ping.py  tasks.py
repository/: __init__.py  cashe_task.py  task.py
schemas/: __init__.py  task.py
service/: __init__.py  task_service.py
