[project]
name = "pomidoro-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.0",
    "psycopg>=3.2.12",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
